# TaskTracker

./: .gitignore  CMakeLists.txt  README.md  main.cpp
.github/workflows/: cross-platform-ci.yml
include/: task.h  task_utils.h
src/: task_utils.cpp
test/: task_tests.cpp
